# move

./: .gitattributes  .gitignore  404.html  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  GRAVEYARD.md  README.md  abilities.html  abort-and-assert.html  address.html  bool.html  coding-conventions.html  conditionals.html  constants.html  creating-coins.html  equality.html  friends.html  functions.html  generics.html  global-storage-operators.html  global-storage-structure.html  index.html  integers.html  introduction.html  loops.html  modules-and-scripts.html  packages.html  print.html  references.html  references.md  rust-toolchain  searchindex.js  searchindex.json  signer.html  standard-library.html  structs-and-resources.html  tuples-unit.md  tuples.html  unit-testing.html  (+4 more)
crates/workspace-hack/: Cargo.toml  README.md
devtools/x/: Cargo.toml
devtools/x/src/: build.rs  cargo.rs  clippy.rs  config.rs  context.rs  diff_summary.rs  fix.rs  fmt.rs  generate_summaries.rs  generate_workspace_hack.rs  installer.rs  main.rs  playground.rs  test.rs  tools.rs  utils.rs
devtools/x/src/cargo/: build_args.rs  selected_package.rs
devtools/x/src/lint/: guppy.rs  license.rs  mod.rs  toml.rs  workspace_classify.rs
language/evm/exec-utils/: Cargo.toml
language/evm/exec-utils/contracts/: hello_world.sol
language/evm/exec-utils/src/: compile.rs  exec.rs  lib.rs  tests.rs  tracing.rs
language/evm/move-ethereum-annotator/: Cargo.toml
language/evm/move-ethereum-annotator/src/: events.rs  functions.rs  lib.rs  util.rs
language/evm/move-to-yul/: Cargo.toml
language/evm/move-to-yul/src/: abi_move_metadata.rs  abi_native_functions.rs  abi_signature.rs  attributes.rs  context.rs  dispatcher_generator.rs  events.rs  evm_transformation.rs  experiments.rs  external_functions.rs  functions.rs  generator.rs  lib.rs  main.rs  native_functions.rs  options.rs  solidity_ty.rs  storage.rs  tables.rs  vectors.rs  yul_functions.rs
language/evm/move-to-yul/tests/: AccountStateMachine.exp  Arithm.exp  Arithm.move  ConstructorTest.exp  ConstructorTest.move  ControlStructures.exp  ControlStructures.move  GlobalVectors.exp  GlobalVectors.move  Locals.exp  Locals.move  MoveCalls.exp  MoveCalls.move  NativeFunctions.exp  NativeFunctions.move  NoGenericCallable.exp  NoGenericCallable.move  Resources.exp  Resources.move  (+21 more)
language/move-analyzer/: Cargo.toml  changelog-code.md  changelog.md  problem.md
language/move-analyzer/doc/: changelog.md  design.md
language/move-analyzer/src/: code_lens.rs  completion.rs  completion2.rs  context.rs  diagnostics.rs  document_symbol.rs  events.rs  goto_definition.rs  hover.rs  ide_test.rs  item.rs  lib.rs  misc.rs  module_visitor.rs  modules.rs  modules_visitor.rs  project.rs  project_context.rs  project_visitor.rs  references.rs  scope.rs  scopes.rs  symbols.rs  syntax.rs  test_code_len.rs  types.rs  utils.rs  vfs.rs
language/move-analyzer/tests/: test_goto_def.rs  test_symbols.rs  test_utils.rs
language/move-binary-format/: Cargo.toml  README.md
language/move-binary-format/serializer-tests/: Cargo.toml
language/move-binary-format/src/: access.rs  binary_views.rs  check_bounds.rs  compatibility.rs  constant.rs  control_flow_graph.rs  cursor.rs  deserializer.rs  errors.rs  file_format.rs  file_format_common.rs  lib.rs  normalized.rs  proptest_types.rs  serializer.rs  text_format.rs  views.rs
language/move-bytecode-verifier/: Cargo.toml  README.md
language/move-bytecode-verifier/bytecode-verifier-tests/: Cargo.toml
language/move-bytecode-verifier/invalid-mutations/: Cargo.toml
language/move-bytecode-verifier/kani/: Cargo.toml
language/move-bytecode-verifier/src/: ability_field_requirements.rs  absint.rs  acquires_list_verifier.rs  check_duplication.rs  code_unit_verifier.rs  control_flow.rs  control_flow_v5.rs  cyclic_dependencies.rs  dependencies.rs  instantiation_loops.rs  instruction_consistency.rs  lib.rs  limits.rs  loop_summary.rs  meter.rs  script_signature.rs  signature.rs  stack_usage_verifier.rs  struct_defs.rs  type_safety.rs  verifier.rs
language/move-bytecode-verifier/transactional-tests/: Cargo.toml
language/move-core/types/: Cargo.toml
language/move-native/: Cargo.toml
language/move-native/src/: conv.rs  lib.rs  rt.rs  rt_types.rs  serialization.rs  std.rs  structs.rs  target_defs.rs  tests.rs  vector.rs
language/move-stdlib/: Cargo.toml  address20-error_description.errmap  error_description.errmap
language/move-stdlib/docs/: ASCII.md  BitVector.md  Errors.md  Event.md  Option.md  ascii.md  bcs.md  bit_vector.md  capability.md  fixed_point32.md  guid.md  hash.md  option.md  overview.md  signer.md  string.md  struct_tag.md  vector.md
language/move-stdlib/sources/: ASCII.move  Option.move  Vector.move  ascii.move  bcs.move  bit_vector.move  capability.move  errors.move  fixed_point32.move  global.move  globals.move  guid.move  hash.move  option.move  signer.move  string.move  struct_tag.move  vector.move
language/move-stdlib/src/: lib.rs  main.rs  tests.rs
language/move-stdlib/tests/: BCSTests.move  EventTests.move  OptionTests.move  VectorTests.move  bcs_tests.move  bit_vector_tests.move  capability_tests.move  fixedpoint32_tests.move  move_unit_test.rs  move_verification_test.rs  option_tests.move  string_tests.move  struct_tag_tests.move  type_name_tests.move  vector_tests.move
language/move-vm/runtime/: Cargo.toml
language/move-vm/test-utils/: Cargo.toml
language/move-vm/types/: Cargo.toml
language/solana/move-to-solana/: Cargo.toml
language/testing-infra/transactional-test-runner/: Cargo.toml
language/tools/move-bytecode-converter/: Cargo.toml
language/tools/move-bytecode-viewer/: Cargo.toml
language/tools/move-explain/: Cargo.toml
language/tools/move-mv-llvm-compiler/: Cargo.toml  README.md
move-vm-backend/: Cargo.toml
move-vm-backend-common/: Cargo.toml
move-vm-backend-common/src/: lib.rs  types.rs
move-vm-backend/src/: abi.rs  lib.rs  storage.rs  warehouse.rs
move-vm-backend/tests/: mock.rs  move_vm.rs
move-vm-support/: Cargo.toml
move-vm-support/src/: lib.rs  ss58_address.rs
(+2445 files in other folders)
