[package]
name = "move-vm-backend-common"
version = "0.1.0"
authors = ["Eiger <hello@eiger.co>"]
edition = "2021"
readme = "README.md"

repository = "https://github.com/eigerco/substrate-move"
description = "MoveVM backend common"

[dependencies]
anyhow = { version = "1.0", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_bytes = { version = "0.11", default-features = false, features = ["alloc"] }
bcs = { git = "https://github.com/eigerco/bcs.git", default-features = false, branch = "master" }

[features]
default = ["std"]

std = [
    "anyhow/std",
]
