[package]
name = "workspace-hack"
version = "0.1.0"
authors = ["Diem Association <opensource@diem.com>"]
description = "Diem workspace hack"
repository = "https://github.com/diem/diem"
homepage = "https://diem.com"
license = "Apache-2.0"
publish = false
edition = "2018"

### BEGIN HAKARI SECTION
[dependencies]
arrayvec = { version = "0.5.2", features = ["array-sizes-33-128", "std"] }
block-buffer = { version = "0.9.0", default-features = false, features = ["block-padding"] }
bstr = { version = "0.2.15", features = ["lazy_static", "regex-automata", "serde", "serde1", "serde1-nostd", "std", "unicode"] }
byteorder = { version = "1.4.3", features = ["std"] }
codespan-reporting = { version = "0.11.1", default-features = false, features = ["serde", "serialization"] }
crossbeam-utils = { version = "0.8.3", features = ["lazy_static", "std"] }
getrandom = { version = "0.2.2", default-features = false, features = ["std"] }
log = { version = "0.4.14", default-features = false, features = ["serde", "std"] }
memchr = { version = "2.4.0", features = ["std", "use_std"] }
num-traits = { version = "0.2.14", features = ["i128", "std"] }
plotters = { version = "0.3.0", default-features = false, features = ["area_series", "evcxr", "histogram", "line_series", "plotters-svg", "svg_backend"] }
rand_core = { version = "0.5.1", default-features = false, features = ["alloc", "getrandom", "std"] }
regex = { version = "1.4.3", features = ["aho-corasick", "memchr", "perf", "perf-cache", "perf-dfa", "perf-inline", "perf-literal", "std", "thread_local", "unicode", "unicode-age", "unicode-bool", "unicode-case", "unicode-gencat", "unicode-perl", "unicode-script", "unicode-segment"] }
regex-automata = { version = "0.1.9", features = ["regex-syntax", "std"] }
regex-syntax = { version = "0.6.23", features = ["unicode", "unicode-age", "unicode-bool", "unicode-case", "unicode-gencat", "unicode-perl", "unicode-script", "unicode-segment"] }
serde = { version = "1.0.130", features = ["derive", "rc", "serde_derive", "std"] }
tracing-core = { version = "0.1.21", features = ["lazy_static", "std"] }

[build-dependencies]
getrandom = { version = "0.2.2", default-features = false, features = ["std"] }
memchr = { version = "2.4.0", features = ["std", "use_std"] }
proc-macro2-9fbad63c4bcf4a8f = { package = "proc-macro2", version = "0.4.30", features = ["proc-macro"] }
proc-macro2-dff4ba8e3ae991db = { package = "proc-macro2", version = "1.0.28", features = ["proc-macro"] }
quote-3b31131e45eafb45 = { package = "quote", version = "0.6.13", features = ["proc-macro"] }
quote-dff4ba8e3ae991db = { package = "quote", version = "1.0.9", features = ["proc-macro"] }
regex = { version = "1.4.3", features = ["aho-corasick", "memchr", "perf", "perf-cache", "perf-dfa", "perf-inline", "perf-literal", "std", "thread_local", "unicode", "unicode-age", "unicode-bool", "unicode-case", "unicode-gencat", "unicode-perl", "unicode-script", "unicode-segment"] }
regex-syntax = { version = "0.6.23", features = ["unicode", "unicode-age", "unicode-bool", "unicode-case", "unicode-gencat", "unicode-perl", "unicode-script", "unicode-segment"] }
syn-3575ec1268b04181 = { package = "syn", version = "0.15.44", features = ["clone-impls", "derive", "extra-traits", "full", "parsing", "printing", "proc-macro", "quote", "visit"] }
syn-dff4ba8e3ae991db = { package = "syn", version = "1.0.74", features = ["clone-impls", "derive", "extra-traits", "full", "parsing", "printing", "proc-macro", "quote", "visit", "visit-mut"] }

[target.x86_64-unknown-linux-gnu.dependencies]
libc = { version = "0.2.112", features = ["std"] }

[target.x86_64-unknown-linux-gnu.build-dependencies]
libc = { version = "0.2.112", features = ["std"] }

[target.x86_64-apple-darwin.dependencies]
libc = { version = "0.2.112", features = ["std"] }

[target.x86_64-apple-darwin.build-dependencies]
libc = { version = "0.2.112", features = ["std"] }

### END HAKARI SECTION
