[package]
name = "x"
version = "0.1.0"
authors = ["Diem Association <opensource@diem.com>"]
description = "Diem extended cargo tasks"
edition = "2021"
publish = false
license = "Apache-2.0"

[dependencies]
anyhow = "1.0.52"
camino = "1.0.3"
cargo_metadata = "0.14.0"
chrono = "0.4.19"
clap = { version = "3.1.8", features = ["derive"] }
colored-diff = "0.2.2"
determinator = "0.7.0"
env_logger = "0.8.3"
globset = "0.4.6"
guppy = { version = "0.12.3", features = ["summaries"] }
indexmap = "1.6.2"
indoc = "1.0.3"
log = "0.4.14"
nextest-config = { git = "https://github.com/diem/diem-devtools", rev = "f99a204e3d3f8e503d51d7df42e55c8282b59154" }
nextest-runner = { git = "https://github.com/diem/diem-devtools", rev = "f99a204e3d3f8e503d51d7df42e55c8282b59154" }
rayon = "1.5.0"
regex = "1.5.5"
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.64"
supports-color = "1.3.0"
toml = "0.5.8"
x-core = { path = "../x-core" }
x-lint = { path = "../x-lint" }
