[package]
name = "move-binary-format"
version = "0.0.3"
authors = ["Diem Association <opensource@diem.com>"]
description = "Move Binary Format"
repository = "https://github.com/diem/diem"
homepage = "https://diem.com"
license = "Apache-2.0"
publish = ["crates-io"]
edition = "2021"

[dependencies]
anyhow = { version = "1.0", default-features = false }
proptest = { version = "1.2", default-features = false, optional = true }
proptest-derive = { version = "0.4", default-features = false, optional = true }
ref-cast = "1.0"
variant_count = "1.1"
move-core-types = { path = "../move-core/types", default-features = false }
serde = { version = "1.0", default-features = false }
arbitrary = { version = "1.3", default-features = false, features = ["derive"], optional = true }
hashbrown = { version = "0.14", default-features = false, features = ["ahash"] }

[dev-dependencies]
proptest = "1.0"
proptest-derive = "0.4"
move-core-types = { path = "../move-core/types", features = ["fuzzing" ] }
serde_json = "1.0"

[features]
default = ["std"]
fuzzing = ["proptest", "proptest-derive", "arbitrary", "move-core-types/fuzzing"]

std = [
    "anyhow/std",
    "move-core-types/std",
]
