[package]
name = "move-native"
version = "0.1.1"
edition = "2021"
authors = ["Diem Association <opensource@diem.com>"]
description = "Runtime calls for LLVM-compiled Move"
repository = "https://github.com/diem/diem"
homepage = "https://diem.com"
license = "Apache-2.0"
publish = false

[workspace]
members = ["."]

[lib]
crate-type = ["staticlib"]

[features]
solana = []

[dependencies]
serde = { version = "1.0.124", default-features = false }
sha2 = { version = "0.10.6", default-features = false }
sha3 = { version = "0.10.6", default-features = false }
