[package]
name = "move-stdlib"
version = "0.1.1"
edition = "2021"
authors = ["Diem Association <opensource@diem.com>"]
description = "Diem stdlib"
repository = "https://github.com/diem/diem"
homepage = "https://diem.com"
license = "Apache-2.0"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
move-errmapgen = { path = "../move-prover/move-errmapgen", optional = true }
move-docgen = { path = "../move-prover/move-docgen", optional = true }
move-command-line-common = { path = "../move-command-line-common", optional = true }
move-prover = { path = "../move-prover", optional = true }
move-vm-types = { path = "../move-vm/types", default-features = false }
move-binary-format = { path = "../move-binary-format", default-features = false }
move-core-types = { path = "../move-core/types", default-features = false }
move-vm-runtime = { path = "../move-vm/runtime", default-features = false }
move-compiler = { path = "../move-compiler", optional = true }
log = { version = "0.4", optional = true }
smallvec = { version = "1.11", default-features = false }
sha2 = { version = "0.10", default-features = false }
sha3 = { version = "0.10", default-features = false }
hex = { version = "0.4", default-features = false }

[dev-dependencies]
anyhow = "1.0"
walkdir = "2.4"
move-unit-test = { path = "../tools/move-unit-test" }
tempfile = "3.8"
file_diff = "1.0"
move-cli = { path = "../tools/move-cli" }
move-package = { path = "../tools/move-package" }

[features]
default = ["std", "address32"]
testing = []
address20 = ["move-core-types/address20"]
address32 = ["move-core-types/address32"]
std = [
    "log/std",
    "move-errmapgen",
    "move-docgen",
    "move-command-line-common",
    "move-prover",
    "move-vm-types/std",
    "move-binary-format/std",
    "move-core-types/std",
    "move-vm-runtime/std",
    "move-compiler",
    "hex/std",
]

