[package]
name = "evm-exec-utils"
version = "0.1.0"
authors = ["Diem Association <opensource@diem.com>"]
edition = "2021"
license = "Apache-2.0"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# external dependencies
sha3 = "0.9.1"
evm = "0.33.1"
primitive-types = "0.10.1"
hex = "0.4.3"
tempfile = "3.2.0"
dirs = "4.0.0"
anyhow = "1.0.52"

# move dependencies
workspace-hack = { version = "0.1", path = "../../../crates/workspace-hack" }
move-command-line-common = { path = "../../move-command-line-common" }
