[package]
name = "move-to-yul"
version = "0.1.0"
authors = ["Diem Association <opensource@diem.com>"]
publish = false
edition = "2018"
license = "Apache-2.0"

[dependencies]
# move dependencies
move-prover-boogie-backend = { path = "../../move-prover/boogie-backend" }
move-command-line-common = { path = "../../move-command-line-common" }
move-binary-format = { path = "../../move-binary-format" }
move-model = { path = "../../move-model" }
move-stackless-bytecode = { path = "../../move-prover/bytecode" }
move-ir-types = { path = "../../move-ir/types" }
move-core-types = { path = "../../move-core/types" }

workspace-hack = { version = "0.1", path = "../../../crates/workspace-hack" }

# external dependencies
async-trait = "0.1.42"
anyhow = "1.0.38"
atty = "0.2.14"
clap = "2.33.3"
codespan = "0.11.1"
codespan-reporting = "0.11.1"
futures = "0.3.12"
hex = "0.4.3"
itertools = "0.10.0"
log = { version = "0.4.14", features = ["serde"] }
maplit = "1.0.2"
num = "0.4.0"
pretty = "0.10.0"
regex = "1.4.3"
rand = "0.8.3"
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.64"
simplelog = "0.9.0"
once_cell = "1.7.2"
tera = "1.7.1"
tokio = { version = "1.8.1", features = ["full"] }
toml = "0.5.8"
structopt = "0.3.21"

[dev-dependencies]
datatest-stable = "0.1.1"
move-prover-test-utils = { path = "../../move-prover/test-utils" }
shell-words = "1.0.0"
walkdir = "2.3.1"
tempfile = "3.2.0"
move-stdlib = { path = "../../move-stdlib" }

[lib]
doctest = false

[[test]]
name = "testsuite"
harness = false
