[package]
name = "move-core-types"
version = "0.0.4"
authors = ["Diem Association <opensource@diem.com>"]
description = "Core types for Move"
repository = "https://github.com/diem/diem"
homepage = "https://diem.com"
license = "Apache-2.0"
publish = ["crates-io"]
edition = "2021"

[dependencies]
anyhow = { version = "1.0", default-features = false }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
proptest = { version = "1.2", default-features = false, optional = true }
proptest-derive = { version = "0.4", default-features = false, optional = true }
rand = { version = "0.8", default-features = false }
ref-cast = "1.0"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_bytes = { version = "0.11", default-features = false, features = ["alloc"] }
primitive-types = { version = "0.12", default-features = false }
uint = { version = "0.9", default-features = false }
num = { version = "0.4", default-features = false, features = ["alloc"] }
ethnum = { version = "1.4", default-features = false }
hashbrown = { version = "0.14", default-features = false, features = ["ahash"] }
bcs = { default-features = false, git = "https://github.com/eigerco/bcs.git", branch = "master" }
arbitrary = { version = "1.3", default-features = false, features = ["derive_arbitrary"], optional = true }

[dev-dependencies]
proptest = "1.2"
proptest-derive = "0.4"
regex = "1.9"
arbitrary = { version = "1.3", default-features = false, features = ["derive_arbitrary"] }
serde_json = "1.0"
once_cell = "1.18"

[features]
address20 = []
address32 = []
default = ["std", "address32"]
fuzzing = ["proptest", "proptest-derive", "arbitrary"]

std = [
    "anyhow/std",
    "uint/std",
    "primitive-types/std",
    "bcs/std",
]
