[package]
name = "move-vm-test-utils"
version = "0.1.0"
authors = ["Diem Association <opensource@diem.com>"]
description = "Move VM Test Utils"
repository = "https://github.com/diem/diem"
homepage = "https://diem.com"
license = "Apache-2.0"
publish = false
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.52"

move-vm-runtime = { path = "../runtime" }
move-core-types = {path = "../../move-core/types" }
move-binary-format = { path = "../../move-binary-format" }
move-table-extension = { path = "../../extensions/move-table-extension", optional = true }
workspace-hack = { version = "0.1", path = "../../../crates/workspace-hack" }

[features]
default = [ ]
table-extension = [ "move-table-extension" ]
